add welcome page

--- a/app/views/development_metrics/index.erb
+++ b/app/views/development_metrics/index.erb
@@ -1,1 +1,5 @@
 <%=  render 'development_metrics/development_metrics_sidebar', enabled_users_section: @enabled_users_section %>
+<div class="vh-100 d-flex justify-content-center flex-column align-items-center">
+  <div class="p-2"><%= image_tag('welcome.svg')%></div>
+  <div class="p-2">Select a project from the left menu to see it’s metrics!</div>
+</div>
