--- a/app/views/shared/_column-chart.erb
+++ b/app/views/shared/_column-chart.erb
@@ -1,6 +1,6 @@
 <div class='p-3 chart-container'>
   <span class='metric-title'><%= metric_name %></span>
-  <div id='chart-2' class='chart'>
+  <div class='chart'>
     <%= column_chart metric,
         suffix: suffix,
         library: { spanGaps: true } %>
