--- a/app/views/development_metrics/code_climate/_code_climate_repository_summary.erb
+++ b/app/views/development_metrics/code_climate/_code_climate_repository_summary.erb
@@ -1,6 +1,6 @@
 <div class="metrics">
   <div class="row">
-    <div class="col-4 p-3" style="margin-left:10px;">
+    <div class="col-4 p-3 ms-1">
     <h4>CodeClimate summary</h4>
       </div>
           <div class="col-7 p-4">
