[EM-300] Add pull request size metric details views

--- a/app/views/pull_requests/time_to_merge_prs_repository/index.erb
+++ b/app/views/pull_requests/time_to_merge_prs_repository/index.erb
@@ -15,5 +15,5 @@
             <% end %>
           </div>
     </div>
-    <%= render partial: 'shared/pull_request_list' , locals: { pull_requests: @pull_requests} %>
+    <%= render partial: 'shared/pull_request_list' , locals: { pull_requests: @pull_requests, kpi_label: 'hours' } %>
 </div>
