--- a/app/views/pull_requests/time_to_merge_prs/index.erb
+++ b/app/views/pull_requests/time_to_merge_prs/index.erb
@@ -22,5 +22,5 @@
       <% end %>
     </div>
   </div>
-  <%= render partial: 'shared/pull_request_list' , locals: { pull_requests: @pull_requests} %>
+  <%= render partial: 'shared/pull_request_list' , locals: { pull_requests: @pull_requests, kpi_label: 'hours' } %>
 </div>
