--- a/app/views/pull_requests/time_to_merge_prs_repository/index.erb
+++ b/app/views/pull_requests/time_to_merge_prs_repository/index.erb
@@ -2,7 +2,7 @@
   <div class="metrics-container">
     <div class="row title_sidebar">
         <div class="col-md-6">
-          <b class="rute_title_grey"><%= params[:repository_name] +'/'%></b>
+          <b class="rute_title_grey"><%= @repository_name %>/</b>
           <b class="rute_title">Merge Time</b>
         </div>
           <div class="col-md-6 interval d-flex flex-row-reverse">
@@ -10,7 +10,7 @@
                                                             id: 'nav-filter-form', style:"display: flex;"} do |f|%>
 
 
-                <%= hidden_field_tag 'repository_name', params[:repository_name] %>
+                <%= hidden_field_tag 'repository_name', @repository_name %>
                 <%= render 'shared/interval-filter', form: f %>
             <% end %>
           </div>
