--- a/app/views/development_metrics/review_turnaround/_main_metric.erb
+++ b/app/views/development_metrics/review_turnaround/_main_metric.erb
@@ -5,6 +5,7 @@
             } if review_turnaround && (review_turnaround[:per_repository] || review_turnaround[:per_department]) %>
 <%= render partial: 'shared/column-chart',
             locals: {
+              chart_id: 'time-to-second-review',
               metric_name: 'Distribution',
               suffix: " reviews",
               metric: review_turnaround[:per_repository_distribution] || review_turnaround[:per_department_distribution]
