Fix no empty line and double quotes for single quotes

--- a/app/views/shared/_column-chart.erb
+++ b/app/views/shared/_column-chart.erb
@@ -3,7 +3,7 @@
   <div class='chart'>
     <%= column_chart metric,
         id: chart_id,
-        empty: "No data",
+        empty: 'No data',
         suffix: suffix,
         library: { spanGaps: true } %>
   </div>
