add projects environments

--- a/app/javascript/active_admin_styles/active_admin.scss
+++ b/app/javascript/active_admin_styles/active_admin.scss
@@ -10,6 +10,7 @@
 // Active Admin's got SASS!
 @import '~@activeadmin/activeadmin/src/scss/mixins';
 @import '~@activeadmin/activeadmin/src/scss/base';
+@import 'activeadmin_addons/src/stylesheets/all'
 
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
