--- a/app/views/development_metrics/products.erb
+++ b/app/views/development_metrics/products.erb
@@ -9,7 +9,7 @@
     </div>
     <% if @product %>
       <%if current_page?(products_development_metrics_path)%>
-        <%= render 'development_metrics/products/general',
+        <%= render 'development_metrics/products/general2',
           product: @product,
           defect_escape_rate: @defect_escape_rate,
           development_cycle: @development_cycle,
@@ -18,6 +18,7 @@
           defect_escape_rate_definition: @defect_escape_rate_definition,
           planned_to_done_definition: @planned_to_done_definition,
           has_jira_project: @has_jira_project,
+          has_repositories: @has_repositories,
           show_defect_escape_rate: @show_defect_escape_rate,
           show_development_cycle: @show_development_cycle,
           show_planned_to_done: @show_planned_to_done %>
