--- a/app/views/development_metrics/_products_list.erb
+++ b/app/views/development_metrics/_products_list.erb
@@ -1,7 +1,7 @@
 <div class="list-group">
   <ul class="list-unstyled ps-0">
 
-    <% all_products.each do |product| %>
+    <% all_products.sort_by(&:name).each do |product| %>
       <li class="mb-1" data-turbolinks-permanent>
 
         <%= link_to products_development_metrics_path({product_name: product.name, metric: { from: initial_from, to: initial_to }}) do %>
@@ -12,7 +12,7 @@
 
         <div data-turbolinks-permanent class="collapse" id="<%= product.name %>-collapse">
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
-              <% product.repositories.each do |repository|%>
+              <% product.repositories.sort_by(&:name).each do |repository|%>
                 <a href='<%= (repositories_development_metrics_path({repository_name: repository.name, metric: { from: initial_from, to: initial_to, }})) %>' class='btn btn-toggle sidebar_font' role='button'><%= repository.name %></a>
                 <% end %>
             </ul>
