add style btn-primary to date interval submit button

--- a/app/views/shared/_interval-filter.erb
+++ b/app/views/shared/_interval-filter.erb
@@ -17,4 +17,4 @@
   html5: true
 %>
 
-<%= form.button :submit, 'Submit', class: 'ml-1', id: 'submitButton' %>
+<%= form.button :submit, 'Submit', class: 'ml-1 btn-primary', id: 'submitButton' %>
