--- a/app/views/code_climate/departments/_code_climate_department_report.erb
+++ b/app/views/code_climate/departments/_code_climate_department_report.erb
@@ -2,6 +2,7 @@
   <div class="col-md-12">
     <div class="table-responsive">
       <table class="table table-striped table-bordered table-hover">
+        <caption>Repositories with available CodeClimate data for selected time range</caption>
       <thead class="thead-dark"><th colspan="7">Repositories with available CodeClimate data for selected time range</th></thead>
         <thead class="thead-light">
           <th>Name</th>
@@ -28,6 +29,7 @@
       </table>
       <% if repositories_without_cc.present? -%>
         <table class="table table-striped table-bordered table-hover">
+          <caption>Repositories without available CodeClimate data for selected time range</caption>
           <thead class="thead-dark"><th colspan="7">Repositories without available CodeClimate data for selected time range</th></thead>
           <tbody>
             <% repositories_without_cc.each do |repository| -%>
