--- a/app/views/development_metrics/repositories.erb
+++ b/app/views/development_metrics/repositories.erb
@@ -3,6 +3,7 @@
     review_turnaround_presenter = RepositoryMetricPresenter.new(@review_turnaround, @review_turnaround_definition)
     merge_time_presenter = RepositoryMetricPresenter.new(@merge_time, @merge_time_definition)
     pull_request_size_presenter = RepositoryMetricPresenter.new(@pull_request_size, @pull_request_size_definition)
+    review_coverage_presenter = RepositoryMetricPresenter.new(@review_coverage, @review_coverage_definition)
   %>
 
   <div class="metrics-container">
@@ -103,13 +104,51 @@
               <% end %>
             </div>
           </div>
-        <div class="col-md-1">
-          <div class="distribution-report-button mr-5">
-            <%= link_to 'See details',
+          <div class="col-md-1">
+            <div class="distribution-report-button mr-5">
+              <%= link_to 'See details',
                         repository_pull_request_size_prs_repository_index_path(@repository.name, { metric: { from: params&.dig(:metric, :from), to: params&.dig(:metric, :to) }}),
                         class: 'btn btn-detail' if pull_request_size_presenter.per_repository_distribution_has_data_to_display?
-            %>
+              %>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="metrics">
+        <div class='row'>
+          <div class="col-md-11">
+            <div class="box-title" >
+              <%= review_coverage_presenter.metric_name %>
+              <span data-placement='right' class='metric_tooltip' aria-hidden='true' data-toggle='tooltip' title='<%= review_coverage_presenter.metric_explanation %>'>¡</span>
+            </div>
+            <div class="box-title" >
+              <% if @review_coverage_avg.present? %>
+                <span class="badge badge-info success_rate_btn">
+                  Average: <%= @review_coverage_avg[:avg_number] %>%
+                </span>
+                <span class="badge badge-info success_rate_btn">
+                  Total: <%= @review_coverage_avg[:total] %> PRs (bots excluded)
+                </span>
+              <% end %>
+            </div>
+            <div class="graph">
+              <% if review_coverage_presenter.per_repository_distribution_has_data_to_display? %>
+                <%= render 'development_metrics/review_coverage/main_metric', review_coverage: review_coverage_presenter.metric %>
+              <% else %>
+                <div class="p-3 text-center">
+                  <span class="text-danger extra-padding"><h5>No data to display for the selected period</h5></span>
+                </div>
+              <% end %>
+            </div>
+          </div>
+          <div class="col-md-1">
+            <div class="distribution-report-button mr-5">
+              <%= link_to 'See details',
+                          repository_review_coverage_prs_repository_index_path(@repository.name, { metric: { from: params&.dig(:metric, :from), to: params&.dig(:metric, :to) }}),
+                          class: 'btn btn-detail' if review_coverage_presenter.per_repository_distribution_has_data_to_display?
+              %>
+            </div>
+          </div>
         </div>
       </div>
     <% else %>
